--- a/app/src/main/res/layout/activity_emergency_map.xml
+++ b/app/src/main/res/layout/activity_emergency_map.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:background="@color/panel_bg_dark"
+        android:background="@color/bg_card"
         android:padding="12dp"
         android:elevation="6dp">
 
@@ -64,7 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/panel_bg_dark"
+        android:background="@color/bg_card"
         android:padding="20dp"
         android:layout_alignParentBottom="true"
         android:elevation="10dp">
