--- a/app/src/main/res/layout/activity_map_picker.xml
+++ b/app/src/main/res/layout/activity_map_picker.xml
@@ -8,7 +8,8 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clickable="true" />
+        android:clickable="true"
+        android:contentDescription="Interactive map for selecting home location" />
 
     <!-- Address Input Bar -->
     <LinearLayout
